--- a/assets/style.css
+++ b/assets/style.css
@@ -77,3 +77,20 @@ button {
     margin-top: 20px;
     list-style-type: none;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+  }
+  
